--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     </div>
 
                     <a href="https://www.linkedin.com/in/jinha-kang/" onClick="MyWindow=window.open('https://www.linkedin.com/in/jinha-kang/','MyWindow','width=600,height=300'); return false;">
-                        <img class="linkedin" src="../images/linkedin.png" />
+                        <img class="linkedin" src="linkedin.png" />
                     </a>
 
                 </div>
