--- a/index.html
+++ b/index.html
@@ -99,11 +99,11 @@
 
 
         <div id="content2">
-            <img src="../images/grid/amazonprime2024.png" /> <!--../images/main/iss.jpg-->
+            <img src="images/grid/amazonprime2024.png" /> <!--../images/main/iss.jpg-->
         </div>
 
         <div id="content3">
-            <img src="../images/grid/e-commerce.png" />
+            <img src="images/grid/e-commerce.png" />
         </div>
 
         <div id="content4">
