--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
         <div id="content1">
             <a href="infographic.html">
-                <img src="../images/grid/infographic.png" />
+                <img src="images/grid/infographic.png" />
             </a>
 
         <!-- <div class="subBox">
@@ -107,19 +107,19 @@
         </div>
 
         <div id="content4">
-            <img src="../images/grid/uclira.png" />
+            <img src="images/grid/uclira.png" />
         </div>
 
         <div id="content5">
-            <img src="../images/grid/area23.png" />
+            <img src="images/grid/area23.png" />
         </div>
 
         <div id="content6">
-            <img src="../images/grid/onTheGoga.png" />
+            <img src="images/grid/onTheGoga.png" />
         </div>
 
         <div id="content7">
-            <img src="../images/grid/luminary.png" />
+            <img src="images/grid/luminary.png" />
         </div>
 
 
